fixed flex spacing gap for library container

--- a/src/components/Library.css
+++ b/src/components/Library.css
@@ -1,4 +1,5 @@
 .library-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content:center;
 }
